[project]
name = "ecofinds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.0",
]
